--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-index.lock
+.bash_history
+.bash_logout
+.bashrc
+.gitconfig
+.gitignore
+.motd_shown
+.profile
+.sudo_as_admin_successful
+.viminfo
